Your commit message

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -1,23 +1,30 @@
-/**
- * CSS files with the .module.css suffix will be treated as CSS modules
- * and scoped locally.
- */
-
 .heroBanner {
   padding: 4rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
+  background-color: #2b3137;
+  color: #fff;
 }
 
-@media screen and (max-width: 996px) {
-  .heroBanner {
-    padding: 2rem;
-  }
+.features {
+  padding: 2rem 0;
+  text-align: center;
 }
 
-.buttons {
+.container {
+  margin: 0 auto;
+  max-width: 1200px;
+  padding: 0 1rem;
+}
+
+.row {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-wrap: wrap;
+  margin: -1rem;
+}
+
+.col {
+  flex: 1;
+  padding: 1rem;
 }
